Long article title not displaying correctly in stream on mobile or small sliders Prior to this change, the article title is displayed incorrectly hidden by main layout on mobile or small sliders. To fix this, change the class spaceName in news.less and remove the marge on top in slider when it's mobile.

--- a/webapp/src/main/webapp/skin/less/news.less
+++ b/webapp/src/main/webapp/skin/less/news.less
@@ -226,6 +226,10 @@
 
                 .spaceName {
                   color: @baseBackgroundDefault;
+                  display: -webkit-box;
+                  -webkit-line-clamp: 1;
+                  -webkit-box-orient: vertical;
+                  overflow: hidden;
                   font-size: 13px;
                   font-style: normal;
                 }
